--- a/beershop.yaml
+++ b/beershop.yaml
@@ -4,3 +4,8 @@ spring:
   datasource:
     url: jdbc:h2:mem:beershopdb
     driver-class-name: org.h2.Driver
+management:
+  endpoints:
+    web:
+      exposure:
+        include: prometheus
